# networking

./: .bazelrc  .gitignore  .gitmodules  .ko.yaml  BUILD  BUILD.bazel  Dockerfile  Gopkg.toml  Makefile  README.md  WORKSPACE  cloudbuild.yaml  glide.yaml  go.mod  go.sum  version.go
.github/workflows/: bazel.yaml  go.yaml  go.yml
cmd/krouton-network-agent/: BUILD  main.go
cmd/networking-agent/: BUILD  BUILD.bazel  main.go  options.go  options_test.go
cmd/route-controller/: BUILD  controller.go  main.go  utils.go
cmd/test-esp-udp/: main.go
e2e/scenarios/: kops-gce
hack/: release.sh  update-deps.sh
images/: BUILD  BUILD.bazel
images/bazelbuild/: Dockerfile
images/builder/: Dockerfile  onbuild.sh
images/route-controller/: Dockerfile
k8s/: config-vxlan.yaml  daemonset.yaml  gre.yaml  ipsec-plaintext.yaml  ipsec.yaml  kopeio-networking-config-vxlan.yaml  kopeio-networking.yaml  krouton.yaml  layer2.yaml  vxlan.yaml
operator/: .gitignore  Dockerfile  Makefile  PROJECT  go.mod  go.sum  main.go
operator/api/v1alpha1/: groupversion_info.go  networking_types.go  zz_generated.deepcopy.go
operator/channels/: stable
operator/config/: generate-kubebuilder.sh  generate-minimal.sh  kustomization.yaml
operator/config/crd/: kustomization.yaml
operator/config/crd/bases/: addons.kope.io_networkings.yaml
operator/config/crd/patches/: cainjection_in_networkings.yaml  webhook_in_networkings.yaml
operator/config/manager/: controller_manager_config.yaml
operator/config/minimal/: add-tolerations.yaml  deployment.yaml  operator-permissions.yaml  target-permissions.yaml
operator/config/minimal/base/: deployment.yaml  kustomization.yaml  rolebinding.yaml
operator/config/rbac/: networking_editor_role.yaml  networking_viewer_role.yaml  role.yaml
operator/config/samples/: addons_v1alpha1_networking.yaml
operator/controllers/: networking_controller.go
pkg/cni/: BUILD.bazel  configwriter.go  simpleconfigwriter.go
pkg/routecontroller/: iplinks.go  iplinks_test.go  iproutes.go  iproutes_test.go  utils.go
pkg/routecontroller/routingproviders/: provider.go
pkg/routecontroller/routingproviders/grerouting/: grerouting.go
pkg/routecontroller/routingproviders/ipsecrouting/: ipsecrouting.go
pkg/routecontroller/routingproviders/layer2routing/: layer2routing.go
pkg/routecontroller/routingproviders/mockrouting/: routemock.go
pkg/routing/: BUILD  BUILD.bazel  nodes.go  provider.go  providercontroller.go
pkg/routing/gre/: BUILD  BUILD.bazel  README.md  provider.go
pkg/routing/grerouting/: grerouting.go
pkg/routing/ipsec/: BUILD  BUILD.bazel  README.md  TODO  authentication_strategy.go  encapsulation_strategy.go  encryption_strategy.go  esp_listener.go  ipsecrouting.go  works
pkg/routing/ipsecrouting/: authentication_strategy.go  encapsulation_strategy.go  encryption_strategy.go  esp_listener.go  ipsecrouting.go
pkg/routing/layer2/: BUILD  BUILD.bazel  README.md  provider.go
pkg/routing/netutil/: BUILD  BUILD.bazel  helpers.go  link_addresses.go  links.go  neigh_table.go  route_table.go  xfrm_policy_table.go  xfrm_state_table.go
pkg/routing/vxlan/: BUILD  BUILD.bazel  README.md  netlink_monitor.go  vxlanrouting.go
pkg/routing/vxlan2/: BUILD.bazel  README.md  vxlan2routing.go
pkg/util/: BUILD  BUILD.bazel  format.go  stoppable.go
pkg/watchers/: BUILD  BUILD.bazel  nodecontroller.go
tools/: get_workspace_status.sh
