load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    external = "vendored",
    prefix = "kope.io/networking",
)

go_library(
    name = "go_default_library",
    srcs = ["version.go"],
    importpath = "kope.io/networking",
    visibility = ["//visibility:public"],
)
