package(default_visibility = ["//visibility:public"])

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_push",
)

# TODO: Probably need kmod also
container_image(
    name = "networking-agent",
    base = "@debian-base-amd64//image",
    directory = "/",
    entrypoint = ["/networking-agent"],  # Subtle!  Passing a raw string wraps with /bin/sh -c, which means that adding args doesn't work as you might expect
    files = [
        "//cmd/networking-agent",
    ],
)

container_push(
    name = "push-networking-agent",
    format = "Docker",
    image = ":networking-agent",
    registry = "index.docker.io",
    repository = "{STABLE_DOCKER_REGISTRY}/networking-agent",
    tag = "{STABLE_DOCKER_TAG}",
)
