load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "options.go",
    ],
    importpath = "kope.io/networking/cmd/networking-agent",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//pkg/routing:go_default_library",
        "//pkg/routing/ipsec:go_default_library",
        "//pkg/routing/layer2:go_default_library",
        "//pkg/routing/vxlan:go_default_library",
        "//pkg/routing/vxlan2:go_default_library",
        "//pkg/watchers:go_default_library",
        "//vendor/github.com/ghodss/yaml:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
    ],
)

go_binary(
    name = "networking-agent",
    embed = [":go_default_library"],
    importpath = "kope.io/networking/cmd/networking-agent",
    visibility = ["//visibility:public"],
    x_defs = {
        "kope.io/networking.Version": "0.5",  # keep
        "kope.io/networking.GitVersion": "{STABLE_BUILD_SCM_REVISION}",  # keep
    },
)
