load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "nodes.go",
        "provider.go",
        "providercontroller.go",
    ],
    importpath = "kope.io/networking/pkg/routing",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cni:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
    ],
)
