load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["nodecontroller.go"],
    importpath = "kope.io/networking/pkg/watchers",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/routing:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/watch:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)
