load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "helpers.go",
        "link_addresses.go",
        "links.go",
        "neigh_table.go",
        "route_table.go",
        "xfrm_policy_table.go",
        "xfrm_state_table.go",
    ],
    importpath = "kope.io/networking/pkg/routing/netutil",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/vishvananda/netlink:go_default_library",
    ],
)
